@@ -53,6 +53,7 @@ time
    differences with previous versions of SpacePy, on order of a double
    precision. Time conversions around leapseconds may also be different;
    in many cases they were undefined in previous versions.
+ - now and today return UTC times, not local.
 toolbox
  - New function get_url to retrieve data from a URL
  - Change update to retrieve OMNI2 data from SPDF not ViRBO
